--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,23 @@
-# C?u hình sever port
+# Cau h\u00ECnh sever port
 server.port=8888
 
 #
-cong.ten=Cong
+env.ten="cong"
+
+# Cau hinh actuator
+# Tat ca
+management.endpoints.web.exposure.include=*
+# Endpoint cu the
+#management.endpoints.web.exposure.include=health
+
+# Thong tin ung dung
+management.info.env.enabled=true
+info.app.name=Actuator
+info.app.des=This is Actuator
+info.app.version=1.0.0
+
+# User
+spring.security.user.name=admin
+spring.security.user.password=123456
+spring.security.user.roles=ADMIN
+
