--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,6 @@ spring.security.user.name=admin
 spring.security.user.password=123456
 spring.security.user.roles=ADMIN
 
+# Logging pattern for the console
+logging.pattern.console=%clr(%d{dd/MM/yyyy HH:mm}){faint} %clr(%5p) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wEx
+
